--- a/css/styles.css
+++ b/css/styles.css
@@ -290,6 +290,17 @@ select option:disabled {
   background-color: #1e1e1e;
 }
 
+/* Diseño para la habilidad del pokémon */
+.dark-theme .recuadroEquipo .habilidad {
+  margin-top: auto;          /* la empuja al fondo del recuadro */
+  width: 100%;
+  padding: 6px 10px;
+  border-radius: 8px;
+  text-align: center;
+  font-weight: 600;
+  border: 2px solid rgb(255, 255, 255);   /* borde blanco como los ataques */
+}
+
 
 /* === Estilos para la tabla de tipos === */
 /* Encabezados de la tabla */
